tarmac/new_pattern24/kubernetes/platform/observability/kube-prometheus-stack/overlays/environments/dev/grafana_pw_patch.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prometheus-grafana
spec:
  template:
    spec:
      containers:
        - env:
            - name: REQ_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: grafana-password
                  key: password
          name: grafana-sc-alerts
          image: quay.io/kiwigrid/k8s-sidecar:1.25.2
        - env:
            - name: REQ_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: grafana-password
                  key: password
          name: grafana-sc-dashboard
        - env:
            - name: REQ_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: grafana-password
                  key: password
          name: grafana-sc-datasources
          image: quay.io/kiwigrid/k8s-sidecar:1.25.2
        - env:
            - name: GF_SECURITY_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: grafana-password
                  key: password
            - name: GF_INSTALL_PLUGINS
              value: grafana-oncall-app
          name: grafana
