tarmac/new_pattern24/kubernetes/platform/observability/kube-prometheus-stack/overlays/environments/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-name: monitoring
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=devops
    alb.ingress.kubernetes.io/target-type: ip
    cert-manager.io/cluster-issuer: letsencrypt-dev
    external-dns.alpha.kubernetes.io/hostname: monitoring.dev.cliniciannexus.com
    alb.ingress.kubernetes.io/group.name: monitoring
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-3-2021-06
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:946884638317:certificate/e1a35943-f788-43ce-9bde-4cc783009c8d
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: 200,201,202,302
  labels:
  name: monitoring
spec:
  ingressClassName: alb
  rules:
  - host: monitoring.dev.cliniciannexus.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-grafana
            port:
              number: 3000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: prometheus-kube-prometheus-alertmanager
            port:
              name: http-web
        path: /alertmanager
        pathType: Prefix
      - backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              name: http-web
        path: /prometheus
        pathType: Prefix
      - backend:
          service:
            name: grafana-agent
            port:
              name: faro
        path: /faro
        pathType: Prefix
